Kite connect methods Routes for different requirements Zerodha callback hook to set the request token which will let the app use kite apis

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 node_modules
 yarn-error.log
+
+# Will have the env variables and the start command
+run-app.sh
+
+# Local packages via a different registry. Rather keeping the packages versions fixed
+yarn.lock
+package.lock
